--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
 			<artifactId>gson</artifactId>
 			<version>2.8.8</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.5.11</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
