feat: user crud api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 server.error.include-message=always
+# Boolean. If set to true, it persists authorization data and it would not be lost on browser close/refresh
+springdoc.swagger-ui.persistAuthorization=true
