--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
 			<artifactId>springdoc-openapi-ui</artifactId>
 			<version>1.5.11</version>
 		</dependency>
+		<!--Exposing Pagination Information https://www.baeldung.com/spring-rest-openapi-documentation-->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-data-rest</artifactId>
+			<version>1.5.11</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
