--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,10 @@ spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.open-in-view=false
 server.error.include-message=always
-# Boolean. If set to true, it persists authorization data and it would not be lost on browser close/refresh
+# If set to true, it persists authorization data and it would not be lost on browser close/refresh
 springdoc.swagger-ui.persistAuthorization=true
+# file output https://docs.spring.io/spring-boot/docs/current/reference/html/features.html#features.logging
+logging.file.name=demo.log
