--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,10 @@ spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
-spring.jpa.open-in-view=false
+spring.jpa.open-in-view=true
 server.error.include-message=always
 # If set to true, it persists authorization data and it would not be lost on browser close/refresh
 springdoc.swagger-ui.persistAuthorization=true
 # file output https://docs.spring.io/spring-boot/docs/current/reference/html/features.html#features.logging
-logging.file.name=demo.log
+logging.file.name=./logs/demo.log
+logging.logback.rollingpolicy.file-name-pattern=./logs/demo.%d{yyyy-MM-dd}.%i.log
