--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<org.projectlombok.version>1.18.20</org.projectlombok.version>
 		<org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
 		<lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
+		<springdoc-openapi.version>1.5.11</springdoc-openapi.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -66,13 +67,13 @@
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-ui</artifactId>
-			<version>1.5.11</version>
+			<version>${springdoc-openapi.version}</version>
 		</dependency>
 		<!--Exposing Pagination Information https://www.baeldung.com/spring-rest-openapi-documentation-->
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-data-rest</artifactId>
-			<version>1.5.11</version>
+			<version>${springdoc-openapi.version}</version>
 		</dependency>
 
 		<dependency>
