remove unuseful code,upgrade some dependence

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.open-in-view=true
 server.error.include-message=always
-# If set to true, it persists authorization data and it would not be lost on browser close/refresh
+# If set to true, it persists authorization data, it would not be lost on browser close/refresh
 springdoc.swagger-ui.persistAuthorization=true
 # file output https://docs.spring.io/spring-boot/docs/current/reference/html/features.html#features.logging
 logging.file.name=./logs/demo.log
