--- a/pom.xml
+++ b/pom.xml
@@ -15,10 +15,10 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
-		<org.projectlombok.version>1.18.20</org.projectlombok.version>
+		<org.projectlombok.version>1.18.22</org.projectlombok.version>
 		<org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
 		<lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
-		<springdoc-openapi.version>1.5.11</springdoc-openapi.version>
+		<springdoc-openapi.version>1.6.6</springdoc-openapi.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -62,7 +62,7 @@
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
-			<version>2.8.8</version>
+			<version>2.9.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springdoc</groupId>
@@ -112,13 +112,14 @@
 					<configuration>
 						<source>17</source>
 						<target>17</target>
-						<!-- See https://maven.apache.org/plugins/maven-compiler-plugin/compile-mojo.html -->
-						<!-- Classpath elements to supply as annotation processor path. If specified, the compiler   -->
-						<!-- will detect annotation processors only in those classpath elements. If omitted, the     -->
-						<!-- default classpath is used to detect annotation processors. The detection itself depends -->
-						<!-- on the configuration of annotationProcessors.                                           -->
-						<!--                                                                                         -->
-						<!-- According to this documentation, the provided dependency processor is not considered!   -->
+						<!--
+						See https://maven.apache.org/plugins/maven-compiler-plugin/compile-mojo.html
+						Classpath elements to supply as annotation processor path.
+						If specified, the compiler will detect annotation processors only in those classpath elements.
+						If omitted, the default classpath is used to detect annotation processors.
+						The detection itself depends on the configuration of annotationProcessors.
+						According to this documentation, the provided dependency processor is not considered!
+						-->
 						<annotationProcessorPaths>
 							<path>
 								<groupId>org.mapstruct</groupId>
