--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.open-in-view=true
 server.error.include-message=always
+server.error.include-stacktrace=on_param
 # If set to true, it persists authorization data, it would not be lost on browser close/refresh
 springdoc.swagger-ui.persistAuthorization=true
 # file output https://docs.spring.io/spring-boot/docs/current/reference/html/features.html#features.logging
 logging.file.name=./logs/demo.log
 logging.logback.rollingpolicy.file-name-pattern=./logs/demo.%d{yyyy-MM-dd}.%i.log
+my.tokenExpirationValue=1296000000
