--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_example
-spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/elon_admin
+spring.datasource.username=elonshen
+spring.datasource.password=Shen@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
@@ -10,6 +10,7 @@ server.error.include-stacktrace=on_param
 # If set to true, it persists authorization data, it would not be lost on browser close/refresh
 springdoc.swagger-ui.persistAuthorization=true
 # file output https://docs.spring.io/spring-boot/docs/current/reference/html/features.html#features.logging
-logging.file.name=./logs/demo.log
-logging.logback.rollingpolicy.file-name-pattern=./logs/demo.%d{yyyy-MM-dd}.%i.log
-my.tokenExpirationValue=1296000000
+logging.file.name=./demo.log
+logging.logback.rollingpolicy.file-name-pattern=./logs/%d{yyyy-MM-dd}.%i.log
+jwt.private.key=classpath:app.key
+jwt.public.key=classpath:app.pub
