Add the configuration of springDataJPA auditor
Remove the basic authentication in the openapi document

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,10 @@ server.error.include-message=always
 server.error.include-stacktrace=on_param
 # If set to true, it persists authorization data, it would not be lost on browser close/refresh
 springdoc.swagger-ui.persistAuthorization=true
-#springdoc.swagger-ui.operations-sorter=method
+#For sorting endpoints alphabetically
+springdoc.swagger-ui.operationsSorter=alpha
+#For sorting tags alphabetically
+springdoc.swagger-ui.tagsSorter=alpha
 # file output https://docs.spring.io/spring-boot/docs/current/reference/html/features.html#features.logging
 logging.file.name=./demo.log
 logging.logback.rollingpolicy.file-name-pattern=./logs/%d{yyyy-MM-dd}.%i.log
