--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/elon_admin
+spring.datasource.url=jdbc:mariadb://${MYSQL_HOST:localhost}:3306/elon_admin
 spring.datasource.username=elonshen
 spring.datasource.password=Shen@123
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.open-in-view=true
@@ -14,7 +14,7 @@ springdoc.swagger-ui.operationsSorter=alpha
 #For sorting tags alphabetically
 springdoc.swagger-ui.tagsSorter=alpha
 # file output https://docs.spring.io/spring-boot/docs/current/reference/html/features.html#features.logging
-logging.file.name=./demo.log
+logging.file.name=./mars.log
 logging.logback.rollingpolicy.file-name-pattern=./logs/%d{yyyy-MM-dd}.%i.log
 jwt.private.key=classpath:app.key
 jwt.public.key=classpath:app.pub
