--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,15 @@
-spring.datasource.url=jdbc:mariadb://${MYSQL_HOST:localhost}:3306/elon_admin
-spring.datasource.username=elonshen
-spring.datasource.password=Shen@123
+spring.datasource.url=jdbc:mariadb://${MYSQL_HOST:localhost}:3306/mars
+spring.datasource.username=root
+spring.datasource.password=123456
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.open-in-view=true
 server.error.include-message=always
 server.error.include-stacktrace=on_param
-# If set to true, it persists authorization data, it would not be lost on browser close/refresh
 springdoc.swagger-ui.persistAuthorization=true
-#For sorting endpoints alphabetically
 springdoc.swagger-ui.operationsSorter=alpha
-#For sorting tags alphabetically
 springdoc.swagger-ui.tagsSorter=alpha
-# file output https://docs.spring.io/spring-boot/docs/current/reference/html/features.html#features.logging
 logging.file.name=./mars.log
 logging.logback.rollingpolicy.file-name-pattern=./logs/%d{yyyy-MM-dd}.%i.log
 jwt.private.key=classpath:app.key
